force-app/main/default/objects/Insurance_Claim__c/Insurance_Claim__c.object-meta.xml
<CustomObject>
    <description>used to manage insurance claims</description>
    <label>Insurance Claim</label>
    <nameField>
        <displayFormat>ICN-{000000}</displayFormat>
        <label>Insurance Claim Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurance Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>