force-app/main/default/objects/Insurance_Claim__c/fields/Amount_Collected_from_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Amount_Collected_from_Contractor__c</fullName>
    <label>Amount Collected from Contractor</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>