force-app/main/default/objects/Insurance_Claim__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Insurance Claims</relationshipLabel>
    <relationshipName>Insurance_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>