force-app/main/default/objects/Insurance_Claim__c/fields/Claim_Handler__c.field-meta.xml
<CustomField>
    <fullName>Claim_Handler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim Handler</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <errorMessage>Claim handler must be a member of the finance / claim team.</errorMessage>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Insurance Claims</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Finance</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Finance Manager</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Insurance_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>