force-app/main/default/objects/Insurance_Claim__c/fields/Claim_Outsourced__c.field-meta.xml
<CustomField>
    <fullName>Claim_Outsourced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claim Outsourced</label>
    <type>Checkbox</type>
</CustomField>