force-app/main/default/objects/Insurance_Claim__c/fields/Claim_Status__c.field-meta.xml
<CustomField>
    <fullName>Claim_Status__c</fullName>
    <label>Claim Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Waiting on Release Form</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>