force-app/main/default/objects/Insurance_Claim__c/fields/Claim_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Claim_Status_Reason__c</fullName>
    <label>Claim Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Claimant Did Not Proceed</fullName>
            </value>
            <value>
                <fullName>Contractor Filing w/ Own Insurance</fullName>
            </value>
            <value>
                <fullName>Claim Paid</fullName>
            </value>
            <value>
                <fullName>Contractor Repaired Out of Pocket</fullName>
            </value>
            <value>
                <fullName>(Denied) Claimant Unresponsive</fullName>
            </value>
            <value>
                <fullName>(Denied) Contractor Not At Fault</fullName>
            </value>
            <value>
                <fullName>(Denied) Not Enough Evidence Provided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>