force-app/main/default/objects/Insurance_Claim__c/fields/Claimant_Address_Same_as_Service_Address__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Address_Same_as_Service_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if the claimants address is the same as the service address of the claim</description>
    <label>Claimant Address Same as Service Address</label>
    <type>Checkbox</type>
</CustomField>