force-app/main/default/objects/Insurance_Claim__c/fields/Claimant_Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Property_Type__c</fullName>
    <label>Claimant Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client Property</fullName>
            </value>
            <value>
                <fullName>TE Consumer Property</fullName>
            </value>
            <value>
                <fullName>Neighboring Property</fullName>
            </value>
            <value>
                <fullName>Other Property</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>