force-app/main/default/objects/Insurance_Claim__c/fields/Claimant_s_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>Claimant_s_Address_Street__c</fullName>
    <label>Claimant&apos;s Address Street</label>
    <length>120</length>
    <type>Text</type>
</CustomField>