force-app/main/default/objects/Insurance_Claim__c/fields/Claimant_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Claimant_s_Email__c</fullName>
    <label>Claimant&apos;s Email</label>
    <type>Email</type>
</CustomField>