force-app/main/default/objects/Insurance_Claim__c/fields/Claimant_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Claimant_s_Name__c</fullName>
    <label>Claimant&apos;s Name</label>
    <length>155</length>
    <type>Text</type>
</CustomField>