force-app/main/default/objects/Insurance_Claim__c/fields/Claimant_s_Phone__c.field-meta.xml
<CustomField>
    <fullName>Claimant_s_Phone__c</fullName>
    <label>Claimant&apos;s Phone</label>
    <type>Phone</type>
</CustomField>