force-app/main/default/objects/Insurance_Claim__c/fields/Claimants_Address_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Claimants_Address_Zip_Code__c</fullName>
    <label>Claimant&apos;s Address Zip Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>