force-app/main/default/objects/Insurance_Claim__c/fields/Contractor_Deductible_Collected_via__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Deductible_Collected_via__c</fullName>
    <label>Contractor Deductible Collected via</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Job</fullName>
                <default>true</default>
                <label>Job</label>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>