force-app/main/default/objects/Insurance_Claim__c/fields/Contractor_Email__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Email__c</fullName>
    <label>Contractor Email</label>
    <type>Email</type>
</CustomField>