force-app/main/default/objects/Insurance_Claim__c/fields/Contractor_ID__c.field-meta.xml
<CustomField>
    <fullName>Contractor_ID__c</fullName>
    <externalId>true</externalId>
    <label>Contractor ID</label>
    <length>120</length>
    <type>Text</type>
</CustomField>