force-app/main/default/objects/Insurance_Claim__c/fields/Contractor_Name__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contractor Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Contractor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance Claims (Contractor Name)</relationshipLabel>
    <relationshipName>Insurance_Claims2</relationshipName>
    <type>Lookup</type>
</CustomField>