force-app/main/default/objects/Insurance_Claim__c/fields/Contractor_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Phone__c</fullName>
    <formula>IF(NOT(ISBLANK( Contractor_Name__r.Phone )),  Contractor_Name__r.Phone , &quot;No Phone Number Listed&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contractor Phone</label>
    <type>Text</type>
</CustomField>