force-app/main/default/objects/Insurance_Claim__c/fields/Course_Scope__c.field-meta.xml
<CustomField>
    <fullName>Course_Scope__c</fullName>
    <label>Course &amp; Scope?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>