force-app/main/default/objects/Insurance_Claim__c/fields/Coverage_Type__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Type__c</fullName>
    <label>Coverage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self Insured</fullName>
            </value>
            <value>
                <fullName>TaskEasy Insured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>