force-app/main/default/objects/Insurance_Claim__c/fields/Damage_Type__c.field-meta.xml
<CustomField>
    <fullName>Damage_Type__c</fullName>
    <label>Damage Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shattered Window/Door</fullName>
            </value>
            <value>
                <fullName>Structure Damage</fullName>
            </value>
            <value>
                <fullName>Electrical Damage</fullName>
            </value>
            <value>
                <fullName>Fence Damage</fullName>
            </value>
            <value>
                <fullName>Irrigation Damage</fullName>
            </value>
            <value>
                <fullName>Landscaping Damage</fullName>
            </value>
            <value>
                <fullName>Vehicle Damage</fullName>
            </value>
            <value>
                <fullName>Theft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>