force-app/main/default/objects/Insurance_Claim__c/fields/Date_claim_closed__c.field-meta.xml
<CustomField>
    <fullName>Date_claim_closed__c</fullName>
    <label>Date claim closed</label>
    <type>Date</type>
</CustomField>