force-app/main/default/objects/Insurance_Claim__c/fields/Date_Claim_Opened__c.field-meta.xml
<CustomField>
    <fullName>Date_Claim_Opened__c</fullName>
    <label>Date Claim Opened</label>
    <type>Date</type>
</CustomField>