force-app/main/default/objects/Insurance_Claim__c/fields/Date_claim_reported__c.field-meta.xml
<CustomField>
    <fullName>Date_claim_reported__c</fullName>
    <label>Date claim reported</label>
    <type>Date</type>
</CustomField>