force-app/main/default/objects/Insurance_Claim__c/fields/Date_Damage_Noticed__c.field-meta.xml
<CustomField>
    <fullName>Date_Damage_Noticed__c</fullName>
    <label>Date Damage Noticed</label>
    <type>Date</type>
</CustomField>