force-app/main/default/objects/Insurance_Claim__c/fields/Date_Injury_Occured__c.field-meta.xml
<CustomField>
    <fullName>Date_Injury_Occured__c</fullName>
    <description>OA</description>
    <label>Date Injury Occured</label>
    <type>Date</type>
</CustomField>