force-app/main/default/objects/Insurance_Claim__c/fields/Date_Injury_Reported__c.field-meta.xml
<CustomField>
    <fullName>Date_Injury_Reported__c</fullName>
    <label>Date Injury Reported</label>
    <type>Date</type>
</CustomField>