force-app/main/default/objects/Insurance_Claim__c/fields/Date_of_Damage__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Damage__c</fullName>
    <label>Date of Damage</label>
    <type>Date</type>
</CustomField>