force-app/main/default/objects/Insurance_Claim__c/fields/Deductible_Collected__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Collected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deductible Collected</label>
    <type>Checkbox</type>
</CustomField>