force-app/main/default/objects/Insurance_Claim__c/fields/Deductible_Not_Collected_Reason__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Not_Collected_Reason__c</fullName>
    <label>Deductible Not Collected Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hush Money</fullName>
            </value>
            <value>
                <fullName>Consumer Team Error</fullName>
            </value>
            <value>
                <fullName>Client Team Error</fullName>
            </value>
            <value>
                <fullName>Contractor Team Error</fullName>
            </value>
            <value>
                <fullName>Finance Team Error</fullName>
            </value>
            <value>
                <fullName>Contractor Quit</fullName>
            </value>
            <value>
                <fullName>TE Paid Contractor to Repair</fullName>
            </value>
            <value>
                <fullName>Contractor Repaired out of Pocket</fullName>
            </value>
            <value>
                <fullName>No Payout (Claimant Unresponsive)</fullName>
            </value>
            <value>
                <fullName>No Payout (Contractor Not at Fault)</fullName>
            </value>
            <value>
                <fullName>No Payout (Not Enough Evidence Provided)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>