force-app/main/default/objects/Insurance_Claim__c/fields/Facts__c.field-meta.xml
<CustomField>
    <fullName>Facts__c</fullName>
    <label>Facts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>