force-app/main/default/objects/Insurance_Claim__c/fields/High_Dollar_Estimate_Amount__c.field-meta.xml
<CustomField>
    <fullName>High_Dollar_Estimate_Amount__c</fullName>
    <label>High Dollar Estimate Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>