force-app/main/default/objects/Insurance_Claim__c/fields/Incident_Location__c.field-meta.xml
<CustomField>
    <fullName>Incident_Location__c</fullName>
    <label>Incident Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Site</fullName>
            </value>
            <value>
                <fullName>In Transit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>