force-app/main/default/objects/Insurance_Claim__c/fields/Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Id__c</fullName>
    <externalId>true</externalId>
    <label>Job Id</label>
    <length>120</length>
    <type>Text</type>
</CustomField>