force-app/main/default/objects/Insurance_Claim__c/fields/Legacy_Claim_Handler__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Claim_Handler__c</fullName>
    <label>Legacy_Claim Handler</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hikki</fullName>
            </value>
            <value>
                <fullName>Corrine (S&amp;H)</fullName>
            </value>
            <value>
                <fullName>Casey (S&amp;H)</fullName>
            </value>
            <value>
                <fullName>William (S&amp;H)</fullName>
            </value>
            <value>
                <fullName>Vanessa</fullName>
            </value>
            <value>
                <fullName>Nayeli</fullName>
            </value>
            <value>
                <fullName>Sunnie</fullName>
            </value>
            <value>
                <fullName>Mike(Leavit)</fullName>
            </value>
            <value>
                <fullName>Will (TE.I)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>