force-app/main/default/objects/Insurance_Claim__c/fields/Legacy_Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Claim_Number__c</fullName>
    <label>Legacy_Claim Number</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>