force-app/main/default/objects/Insurance_Claim__c/fields/Legacy_In_House_or_Outsourced__c.field-meta.xml
<CustomField>
    <fullName>Legacy_In_House_or_Outsourced__c</fullName>
    <label>Legacy_In-House or Outsourced</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In- House</fullName>
            </value>
            <value>
                <fullName>S&amp;H</fullName>
            </value>
            <value>
                <fullName>Lloyds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>