force-app/main/default/objects/Insurance_Claim__c/fields/Legacy_Last_Contact_w_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Last_Contact_w_Contractor__c</fullName>
    <label>Legacy Last Contact w/ Contractor</label>
    <type>Date</type>
</CustomField>