force-app/main/default/objects/Insurance_Claim__c/fields/Legacy_Self_Insured_or_TaskEasy_Insured__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Self_Insured_or_TaskEasy_Insured__c</fullName>
    <label>Legacy Self Insured or TaskEasy Insured</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Self Insured</fullName>
            </value>
            <value>
                <fullName>TaskEasy Insured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>