force-app/main/default/objects/Insurance_Claim__c/fields/Legacy_TE_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_TE_Client_Name__c</fullName>
    <label>Legacy TE Client Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>