force-app/main/default/objects/Insurance_Claim__c/fields/Low_Dollar_Estimate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Low_Dollar_Estimate_Amount__c</fullName>
    <label>Low Dollar Estimate Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>