force-app/main/default/objects/Insurance_Claim__c/fields/Net_TE_Damage_Payout__c.field-meta.xml
<CustomField>
    <fullName>Net_TE_Damage_Payout__c</fullName>
    <formula>&quot;$&quot; +
TEXT(TE_Damage_Payout_Amount__c - Amount_Collected_from_Contractor__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net TE Damage Payout</label>
    <type>Text</type>
</CustomField>