force-app/main/default/objects/Insurance_Claim__c/fields/Payout_Method__c.field-meta.xml
<CustomField>
    <fullName>Payout_Method__c</fullName>
    <label>Payout Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Gil Invoice</fullName>
            </value>
            <value>
                <fullName>Client Invoice</fullName>
            </value>
            <value>
                <fullName>Company Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>