force-app/main/default/objects/Insurance_Claim__c/fields/Property_Address_of_Incident__c.field-meta.xml
<CustomField>
    <fullName>Property_Address_of_Incident__c</fullName>
    <label>Property Address of Incident</label>
    <length>155</length>
    <type>Text</type>
</CustomField>