force-app/main/default/objects/Insurance_Claim__c/fields/Relationship_to_Claimant__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Claimant__c</fullName>
    <label>Claimant&apos;s Relationship to TE</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Claimant_Property_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Client Tenant</fullName>
            </value>
            <value>
                <fullName>Consumer Tenant</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Client Representative</fullName>
            </value>
            <value>
                <fullName>Client Neighbor</fullName>
            </value>
            <value>
                <fullName>Client Vendor</fullName>
            </value>
            <value>
                <fullName>Consumer Neighbor</fullName>
            </value>
            <value>
                <fullName>Contractor Crew Member</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>