force-app/main/default/objects/Insurance_Claim__c/fields/Service_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Service_Address_City__c</fullName>
    <label>Service Address City</label>
    <length>120</length>
    <type>Text</type>
</CustomField>