force-app/main/default/objects/Insurance_Claim__c/fields/Service_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>Service_Address_Street__c</fullName>
    <label>Service Address Street</label>
    <length>155</length>
    <type>Text</type>
</CustomField>