force-app/main/default/objects/Insurance_Claim__c/fields/Service_Address_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Address_Zip_Code__c</fullName>
    <label>Service Address Zip Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>