force-app/main/default/objects/Insurance_Claim__c/fields/Signed_Release_Form__c.field-meta.xml
<CustomField>
    <fullName>Signed_Release_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed Release Form</label>
    <type>Checkbox</type>
</CustomField>