force-app/main/default/objects/Insurance_Claim__c/fields/Task_id__c.field-meta.xml
<CustomField>
    <fullName>Task_id__c</fullName>
    <externalId>true</externalId>
    <label>Task id</label>
    <length>120</length>
    <type>Text</type>
</CustomField>