force-app/main/default/objects/Insurance_Claim__c/fields/TE_Client_or_Consumer_Name__c.field-meta.xml
<CustomField>
    <fullName>TE_Client_or_Consumer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client / Consumer Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>notEqual</operation>
            <value>Contractor_Account</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance Claims</relationshipLabel>
    <relationshipName>Insurance_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>