force-app/main/default/objects/Insurance_Claim__c/fields/TE_Damage_Payout_Amount__c.field-meta.xml
<CustomField>
    <fullName>TE_Damage_Payout_Amount__c</fullName>
    <label>TE Damage Payout Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>