force-app/main/default/objects/Insurance_Claim__c/fields/TE_Insured__c.field-meta.xml
<CustomField>
    <fullName>TE_Insured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TE Insured?</label>
    <type>Checkbox</type>
</CustomField>