force-app/main/default/objects/Insurance_Claim__c/fields/Type_of_Injury__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Injury__c</fullName>
    <label>Type of Injury</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dog Bite</fullName>
            </value>
            <value>
                <fullName>Auto Accident</fullName>
            </value>
            <value>
                <fullName>Auto Pedestrian Accident</fullName>
            </value>
            <value>
                <fullName>Slip and Fall</fullName>
            </value>
            <value>
                <fullName>Small Body Injury</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>