force-app/main/default/objects/Insurance_Claim__c/recordTypes/GL_General_Liability.recordType-meta.xml
<RecordType>
    <fullName>GL_General_Liability</fullName>
    <active>true</active>
    <label>GL: General Liability</label>
</RecordType>