force-app/main/default/objects/Insurance_Claim__c/recordTypes/OA_Occupational_Accident.recordType-meta.xml
<RecordType>
    <fullName>OA_Occupational_Accident</fullName>
    <active>true</active>
    <label>OA: Occupational Accident</label>
</RecordType>