force-app/main/default/objects/Insurance_Claim__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Damage_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Type_of_Injury__c</columns>
    <columns>Contractor_Name__c</columns>
    <columns>Date_Claim_Opened__c</columns>
    <columns>Facts__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>