force-app/main/default/objects/Insurance_Claim__c/listViews/All_GL_Claims.listView-meta.xml
<ListView>
    <fullName>All_GL_Claims</fullName>
    <columns>NAME</columns>
    <columns>Claim_Status__c</columns>
    <columns>Claim_Handler__c</columns>
    <columns>TE_Client_or_Consumer_Name__c</columns>
    <columns>Date_Claim_Opened__c</columns>
    <columns>Date_claim_closed__c</columns>
    <columns>Damage_Type__c</columns>
    <columns>Service_Address_Street__c</columns>
    <columns>Claimant_s_Address_Street__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Claim_Status__c</field>
        <operation>equals</operation>
        <value>New,In Progress,Waiting on Release Form,Closed</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Insurance_Claim__c.GL_General_Liability</value>
    </filters>
    <label>All GL Claims</label>
    <sharedTo>
        <role>Director_Of_Finance</role>
        <role>External_User</role>
        <role>Finance_Advocate</role>
        <role>Finance_Manager</role>
        <role>Finance_Team_Lead</role>
    </sharedTo>
</ListView>