force-app/main/default/objects/Insurance_Claim__c/listViews/All_OA_Claims.listView-meta.xml
<ListView>
    <fullName>All_OA_Claims</fullName>
    <columns>NAME</columns>
    <columns>Claim_Status__c</columns>
    <columns>Claim_Handler__c</columns>
    <columns>Date_Claim_Opened__c</columns>
    <columns>Date_claim_closed__c</columns>
    <columns>Property_Address_of_Incident__c</columns>
    <columns>Type_of_Injury__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Claim_Status__c</field>
        <operation>equals</operation>
        <value>New,In Progress,Waiting on Release Form,Closed</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Insurance_Claim__c.OA_Occupational_Accident</value>
    </filters>
    <label>All OA Claims</label>
    <sharedTo>
        <role>Director_Of_Finance</role>
        <role>External_User</role>
        <role>Finance_Advocate</role>
        <role>Finance_Manager</role>
        <role>Finance_Team_Lead</role>
    </sharedTo>
</ListView>